Changes for Tom's comments, except open issues.
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@219 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -76,7 +76,7 @@ the studies towards the choices of the parameters to be scanned,
 and finally point to the location of their Matrix Element
 implementation.
 
-\section{Simplified models with boson radiation}
+\section{Simplified models with boson radiation} \label{sec:bosonrad}
 \input{tex/EWSpecificModels_SVMediators}
 
 \section{EFT models with direct DM-boson couplings}
