--- a/doc/tex/TChannelModels.tex
+++ b/doc/tex/TChannelModels.tex
@@ -15,11 +15,13 @@ the SM through exchange of a neutral spin-0 or spin-1 in an
 \schannel process.  A \tchannel process may couple the SM and DM
 directly, leading to a different phenomenology.  Here, we examine a
 model where $\chiDM$ is a Standard Model (SM) singlet, a Dirac
-fermion\footnote{Though outside the scope of this report, a colored
-  vector \tchannel mediator with vector dark matter may also be
-  worthy of study. The UV completion of such models would look like an
-  RS KK gluon,for example. In these case, it is expcted that the most
-  interesting mediator masses will be of order several TeV.}; the
+fermion% dropped after comment from Tom Rizzo
+%\footnote{Though outside the scope of this report, a colored
+%  vector \tchannel mediator with vector dark matter may also be
+%  worthy of study. The UV completion of such models would look like an
+%  RS KK gluon,for example. In these case, it is expcted that the most
+%  interesting mediator masses will be of order several TeV.}
+; the
 mediating particle, labeled $\phi$, is charged and coloured; and the
 SM particle is a quark. Such models have been studied in
 Refs.~\cite{An:2013xka,Papucci:2014iwa}.
@@ -36,7 +38,7 @@ These mediators have SM gauge representations under $(SU(3), SU(2))_Y$ of $(3,2)
 
 \vspace{5mm}
 
-As for the \schannel models, we assume Minimal Flavour Violation (MFV), setting the mediator masses for each flavour; the same logic also applies to the couplings $g$. The available parameters are then
+As for the \schannel models, we assume Minimal Flavour Violation (MFV), setting the mediator masses for each flavour equal; the same logic also applies to the couplings $g$. The available parameters are then
 
 \begin{equation}
 \{ \mDM,\, \Mphi,\, g\}.
