Added motivations and material on single-top/single-b/EW EFT models, main reinterpretation comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@220 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1356,3 +1356,76 @@
 	primaryClass   = "hep-ph",
 	SLACcitation   = "%%CITATION = ARXIV:1406.5542;%%",
 }
+
+@article{Kraml:2012sg,
+	author         = "Kraml, S. and Allanach, B.C. and Mangano, M. and Prosper,
+	H.B. and Sekmen, S. and others",
+	title          = "{Searches for New Physics: Les Houches Recommendations
+	for the Presentation of LHC Results}",
+	journal        = "Eur.Phys.J.",
+	volume         = "C72",
+	pages          = "1976",
+	doi            = "10.1140/epjc/s10052-012-1976-3",
+	year           = "2012",
+	eprint         = "1203.2489",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "FERMILAB-PUB-12-887-T",
+	SLACcitation   = "%%CITATION = ARXIV:1203.2489;%%",
+}
+
+
+@article{Buckley:2010ar,
+	author         = "Buckley, Andy and Butterworth, Jonathan and Lonnblad,
+	Leif and Grellscheid, David and Hoeth, Hendrik
+	and others",
+	title          = "{Rivet user manual}",
+	journal        = "Comput.Phys.Commun.",
+	volume         = "184",
+	pages          = "2803-2819",
+	doi            = "10.1016/j.cpc.2013.05.021",
+	year           = "2013",
+	eprint         = "1003.0694",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "MCNET-10-03",
+	SLACcitation   = "%%CITATION = ARXIV:1003.0694;%%", 
+	note = "{http://rivet.hepforge.org}",
+}
+
+@article{ATOM,
+	author         = "Kim, I.-W.  and Papucci, M. and Sakurai, K. and Weiler, A.",
+	title          = "{ATOM: Automated Testing Of Models}", 
+	journal        = "{to appear}",      
+}
+
+@article{Cranmer:2010hk,
+	author         = "Cranmer, Kyle and Yavin, Itay",
+	title          = "{RECAST: Extending the Impact of Existing Analyses}",
+	journal        = "JHEP",
+	volume         = "1104",
+	pages          = "038",
+	doi            = "10.1007/JHEP04(2011)038",
+	year           = "2011",
+	eprint         = "1010.2506",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	SLACcitation   = "%%CITATION = ARXIV:1010.2506;%%",
+}
+
+@article{Baak:2014wma,
+	author         = "Baak, M. and Besjes, G.J. and Côte, D. and Koutsman, A.
+	and Lorenz, J. and others",
+	title          = "{HistFitter software framework for statistical data
+	analysis}",
+	journal        = "Eur.Phys.J.",
+	number         = "4",
+	volume         = "C75",
+	pages          = "153",
+	doi            = "10.1140/epjc/s10052-015-3327-7",
+	year           = "2015",
+	eprint         = "1410.1280",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ex",
+	SLACcitation   = "%%CITATION = ARXIV:1410.1280;%%",
+}
