--- a/doc/tex/BBBar.tex
+++ b/doc/tex/BBBar.tex
@@ -5,8 +5,7 @@
 {$LastChangedBy$}
 \svnid{$Id: $}
 
-\label{sec:ttdm}
-
+\subsection{Specific models involving $b-$ quarks in the final state}
 
 In some theoretically motivated scenario (e.g. for high $tan\beta$ in 2HDM in the pMSSM), 
 spin-0 mediators might couple more strongly to down generation quarks.
