--- a/doc/tex/DMHFModels.tex
+++ b/doc/tex/DMHFModels.tex
@@ -1,16 +1,23 @@
-\section{\texorpdfstring{$t \bar{t}$+MET models}{ttbar+MET models}}
+
+The first part of this Chapter describes details of the models from in Section~\ref{sec:monojet_scalar}, with 
+emphasis on heavy flavour final states that arise due to the Yukawa couplings of SM quarks to the mediator. 
+In addition, simplified models yielding signatures of a single top of bottom quark in the final state are outlined 
+in Sections~\ref{sec:singletop, sec:singleb}. 
+These models are not as generally applicable as those in the rest of this report, as they make a number of 
+assumptions to enhance the production of these specific final states, but they are included as they still provide a 
+unique search signature. Presentation of model-independent results is strongly encouraged to allow for further 
+reinterpretation that relaxes some of the assumptions in these models.  
+
+\section{\texorpdfstring{$t \bar{t}$ and $b \bar{b}$+MET models}{ttbar/bbar+MET models}}
 
 \input{tex/TTBar.tex}
-
- \section{\texorpdfstring{$b \bar{b}$+MET models}{bbbar+MET models}}
- 
- \input{tex/BBBar.tex}
+\input{tex/BBBar.tex}
 
 \section{\texorpdfstring{Models with a single $top-$quark + MET}{Models with a single top-quark + MET}}
-
+\label{sec:singletop}
 \input{tex/SingleTop.tex}
  
  \section{\texorpdfstring{Models with a single $b-$quark + MET}{Models with a single b-quark + MET}}
- 
+\label{sec:singleb}
  \input{tex/SingleB.tex}
 
