--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -9,16 +9,33 @@
 % Linda 11/5/2015
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+%Despite the appearance of simplified models, we argue that
+%the model independent approach of the EFTs is still relevant.
+The EFT operators considered in this section do not have a simplified model
+completion for Dirac fermion Dark Matter available to date. 
+They provide kinematic distributions that 
+are unique to mono-boson signatures, and that in most cases 
+are not reproduced by an equivalent simplified model~\footnote{Wherever this is
+the case, we recommend only generation of simplified model result as that can be reinterpreted.}. 
+
 A complete list of effective operators with direct DM/boson couplings for
 Dirac DM, up to dimension 7, can be found in~\cite{Cotta:2012nj, Carpenter:2012rg, Crivellin:2015wva}. 
 Higher dimensional operators, up to dimension 8, leading to Higgs+\MET signatures,
-are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}.
-Despite the appearance of simplified models, we argue that
-the model independent approach of the EFTs is still relevant.
-Furthermore, not all EFT operators have a simplified model
-replacement.
+are mentioned in~\cite{Carpenter:2012rg, Berlin:2014cfa}. The first part of this Section outlines
+the main characteristics for a limited number of these models that could be 
+considered in Run-2 searches. 
+%CD: here I'm being too vague?
+In the spirit of the Forum consensus to privilege simplified models,
+model-independent results as in Appendix~\ref{app:Presentation_Of_Experimental_Results} should be privileged
+over considering these operators as realistic benchmarks.
+However, another consideration that emerged from the Forum discussion was that the EFT approach allowed
+more model-independence for reinterpretations, and it is still worth having
+results available in terms of these operators. We devote the end of this Section to 
+provide a recommendation on how to present the results from this model, including an assessment of their  
+validity using a conservative procedure that is only dependent on EFT parameters.
 
-\newthought{Implementation discussed in the Appendix}
+%CD: what is this?
+%\newthought{Implementation discussed in the Appendix}
 
 %%%%%%%%%%%Dimension 5 operators
 \subsection{Dimension 5 operators}
@@ -209,6 +226,8 @@ The coefficients $c_1$ and $c_2$ appearing in (\ref{eq:gViVj}) determine the rel
 % +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 \subsubsection{Parameter scan}
 
+\todo{The axes of these plots will be rescaled in terms of c1/c2.}
+
 As stated above and shown in Ref.~\cite{Nelson:2013pqa}, 
 the kinematic distributions for dimension-7 scalar and pseudoscalar operators
 only shows small differences. This has been verified from a generator-level study:
@@ -343,7 +362,14 @@ Contact interaction operators like the ones in this section
 remain useful tools for comparison of the sensitivity of different search channels, 
 and for reinterpretation of other models under the correct assumptions. 
 To date, there are no UV-complete models available for most of those operators:
-the dimension-7 operators are particularly challenging since their completion involves loops.
+dimension-7 operators are particularly challenging since their completion involves loops~\footnote{
+An example case for the need of loop completions is a simplified model with an additional scalar exchanged at tree level.
+The scalar couples to WW and ZZ in a gauge-invariant way, Integrating out the mediator 
+does not lead to the Lorentz structure of a dimension-7 operator, so it is not possible
+to generate dimension-7 operators that satisfy gauge and Lorentz invariance at the same time.
+A model with a spin-1 mediator cannot be considered as an candidate for completion either, since dimension-7 operators
+only have scalar or pseudoscalar couplings.}. 
+
 However, this may be the focus of future theoretical exploration, as discussed in Ref.~\cite{Crivellin:2015wva}.
 An example of a complete model 
 for scalar DM corresponding to the dimension-5 operator 
@@ -355,9 +381,10 @@ Given these considerations, the recommendations on the presentation of the resul
 for these models are: 
 
 \begin{itemize}
+\item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in Appendix~\ref{app:Presentation_Of_Experimental_Results}.  
 \item Assess the percentage of events that pass the EFT validity condition, and present results using a truncation 
 of the invalid events using the procedure in Section~\ref{sec:EFTValidity} alongside pure EFT results;
-\item Deliver fiducial limits on the cross section of any new physics events, without any model assumption, according to the guidelines in Appendix~\ref{app:Presentation_Of_Experimental_Results}.  
 \end{itemize}
 
 \newthought{Model implementation discussed in the appendix}
+%CD: what is this?
