--- a/doc/tex/Introduction.tex
+++ b/doc/tex/Introduction.tex
@@ -137,6 +137,17 @@ mediator particles), it is a starting point to prepare a set of
 distinct but yet complementary collider searches for Dark Matter, as
 it leads to benchmarks that are easily comparable across channels.
 
+%CD: added after Rizzo's comments. Not sure it belongs here
+Contact interaction operators (EFTs) are also suggested wherever 
+neither a simplified model completion nor simplified model operators 
+yielding similar kinematic distributions are available.
+This is the case for dimension 5-7 operators with direct 
+Dark Matter-electroweak boson couplings. 
+Model-independent results should be emphasized 
+in the signal regions that are unique to these models, 
+and results should be considered with the necessary caution due to EFT 
+validity issues covered in the last chapter in this report. 
+
 \section{Structure of this document}
 
 The first chapter of the report is dedicated to simplified
@@ -151,9 +162,10 @@ for final states including heavy flavor quarks, leaving the implementation
 details to appendix~\ref{app:TTBar_Xsecs}.  
 Chapter~\ref{subsec:EWSpecificModels} contains the benchmark model
 recommendations and choices for final states containing an electroweak 
-boson ($W/Z/gamma/H$). Simplified models from chapter~\ref{subsec:MonojetLikeModels}
-are considered, together with contact interaction operators and specific simplified models leading
-to mono-boson signatures. The technical implementation and further models that can be studied
+boson ($W/Z/gamma/H$). 
+Simplified models from chapter~\ref{subsec:MonojetLikeModels}
+are considered, together with contact interaction operators wherever simplified models are not available
+and specific simplified models leading to mono-boson signatures. The technical implementation and further models that can be studied
 beyond early searches are in appendix~\ref{app:EWSpecificModels_Appendix}. 
 The final chapter is devoted to the treatment of the validity of benchmark
 models from contact interaction operators.
