--- a/doc/tex/Presentation_Of_Experimental_Results.tex
+++ b/doc/tex/Presentation_Of_Experimental_Results.tex
@@ -1,5 +1,3 @@
-\Todo{Add a section on specific information that is necessary to have from experimentalists in DM searches}
-
  We suggest the following to collider searches, when presenting results 
  from the recommended benchmarks: 
  \begin{itemize}
@@ -11,11 +9,14 @@
  \item Provide all necessary material for theorists to reinterpret simplified
  model results as building blocks for more complete models (e.g. signal cutflows,
  acceptances, etc). This point is detailed further in this appendix.
+ \item As detailed in ~\cite{Kraml:2012sg}, model-independent results in terms of limits on 
+ cross-section times acceptance of new phenomena should be provided for all cases,
+ but especially when EFTs are employed as benchmarks. 
  \end{itemize}
 
 Along with the design of new searches to hunt for new physics at the LHC, it is important to consider information needed in order to reinterpret the searches outside of the collaborations. The following is a non-exhaustive list of recommendations in order to make reinterpretation easier and faster. This appendix details considerations for reimplementation of the analysis as well as for using the simplified model results directly given by the collaborations. 
 
-One of the important developments in recent years is an active development of the analyses recasting codes~\cite{Dumont:2014tja, Conte:2014zja, Kim:2015wza}. The aim of these codes is to provide a public library of reimplemented and validated LHC analyses. Such libraries can then be used to analyze validity of a BSM scenario in a systematic and effective manner. The availability of public libraries further facilitates a unified framework and can lead to an organized and central structure to preserve LHC information in a long run. 
+One of the important developments in recent years is an active development of the analyses recasting codes~\cite{Dumont:2014tja, Conte:2014zja, Kim:2015wza,Cranmer:2010hk,ATOM}. The aim of these codes is to provide a public library of reimplemented and validated LHC analyses. Such libraries can then be used to analyze validity of a BSM scenario in a systematic and effective manner. The availability of public libraries further facilitates a unified framework and can lead to an organized and central structure to preserve LHC information in a long run. 
 
 In order to be able to develop such codes, it is important to get complete and systematic information from the collaborations. 
 \begin{itemize}
@@ -25,18 +26,18 @@ In order to be able to develop such codes, it is important to get complete and s
 \section{Reimplementing analyses}
 This section lists information necessary in order to reimplement an analysis. Analysis reimplementation usually consists of several stages. Usually, one starts with reading the analysis note carefully, following which the preselection and event selection cuts are identified. These are then mimicked using a code typically written in C++. The detector simulation is carried out by using public detector simulation softwares e.g.  Delphes~\cite{deFavereau:2013fsa}.  The resulting ROOT file is then analysed using the C++ code written in the previous step.
 \begin{itemize}
-\item \textbf{Analysis documentation}: The collaborations should provide a cutflow table with every analysis, such a cutflow table will naturally define the order of cuts implemented in an analysis. There are several preselection criteria which can not be easily simulated in phenomenology, e.g. MET cleaning. Numbers should be provided after such cuts so that theorists can rescale their number of events in order to account for such cuts. Efficiencies of several reconstructed objects are given as an input to detector simulation softwares like Delphes. It is thus very useful to get parametrised efficiencies for reconstructed objects (as a function of the rapidity $\eta$ and/or transverse momentum $p_T$), along with the working points at which they were evaluated (e.g. loose, tight selection). Object definitions should be clearly identifiable. 
+\item \textbf{Analysis documentation}: The collaborations should provide a cutflow table with every analysis, such a cutflow table will naturally define the order of cuts implemented in an analysis. There are several preselection criteria which can not be easily simulated in phenomenology, e.g. MET cleaning. Numbers should be provided after such cuts so that theorists can rescale their number of events in order to account for such cuts. Efficiencies of several reconstructed objects are given as an input to detector simulation software like Delphes. It is thus very useful to get parametrised efficiencies for reconstructed objects (as a function of the rapidity $\eta$ and/or transverse momentum $p_T$), along with the working points at which they were evaluated (e.g. loose, tight selection). Object definitions should be clearly identifiable. 
 \item \textbf{Validation}: Validation corresponds to re-deriving the results as given by collaborations in order to verify that the implementation of the analysis is correct. Usually most of the bug catching takes place in the phase of validation. The following items are necessary in order to recreate the results. 
 \begin {itemize}
 	\item Monte Carlo generators: Monte Carlo generators along with the exact versions used to produce the event files should be listed. 
 	\item Production cross sections: The order of production cross sections (e.g. LO,NLO,NLL) as well as the codes which were used to compute them should be provided. A table of reference cross sections for several values of particle masses such as ones provided by SUSY cross section working group will be highly appreciated.
 	\item Process Generation: Details of the generated process, detailing number of additional partons generated. 
-	\item Availability of the LHE files: LHE files (detailing at least a few events if not the entire file) corresponding to the benchmarks listed in the analysis  should be made available in order to cross check process generation. For models concerning SUSY, corresponding SLHA files of benchmark files should also be details. Special attention should be paid to list the parameters which change the production cross section or kinematics of the process e.g. mixing angles. 
+	\item Availability of the LHE files: selected LHE files (detailing at least a few events if not the entire file) corresponding to the benchmarks listed in the analysis should be made available in order to cross check process generation. Experimental collaborations may generate events on-the-fly without saving the intermediate LHE file; we advocate that the cross-check of process generation is straight-forward if this information is present, so we encourage the generation of a few selected benchmark points allowing for a LHE file to be saved. For models concerning SUSY, corresponding SLHA files of benchmark files should also be details. Special attention should be paid to list the parameters which change the production cross section or kinematics of the process e.g. mixing angles. 
 	\item Process cards: Process cards includes PDF choices, details of matching algorithms and scales and details of process generation. If process cards are not available, above items should be clearly identified. 
 	\item MadGraph model files: For models which are not already implemented in MadGraph, availability of the corresponding model files is highly desired. It details the exact notation used in the model and hence sets up a complete framework. In case MadGraph is not used, enough information should be provided in order to clearly identify the underlying model used for interpretations. 
 \end{itemize}
 
-\item \textbf{Limit setting}: Detailed description of the likelihood used in order to derive the limits should be given, this can contain statistical procedure within the analysis text itself, however direct availability of the limit setting code as a workspace in RooStats is highly desirable. 
+\item \textbf{Limit setting}: Detailed description of the likelihood used in order to derive the limits should be given, this can contain statistical procedure within the analysis text itself, however direct availability of the limit setting code as a workspace in RooStats or HistFitter~\cite{Baak:2014wma} is highly desirable. 
 \item \textbf{Binned backgrounds}: For analyses using techniques such as sliding windows or an unbinned technique, the Standard Model backgrounds should be given in the form of bins. These backgrounds can then be interpolated. 
 \item \textbf{Recast code}: Finally, the collaborations can provide an analysis code directly implemented in one of the public recasting codes detailed above. Such codes can be published via INSPIRE in order to track the versioning and citations. 
 \end{itemize}
