--- a/doc/tex/EWSpecificModels.tex
+++ b/doc/tex/EWSpecificModels.tex
@@ -66,7 +66,14 @@ The models considered can be divided into four categories:
  \item[Models including a contact operator, where the boson is directly coupled to DM]
  Shown on the right-hand side of Figure~\ref{fig:VPlusMET_EFT},
  these models allow for a contact interaction vertex that directly couples the boson to Dark Matter.
- \item[V-specific simplified models] These models postulate direct couplings of new mediators
+ These models are included in this report devoted to simplified models since 
+ UV completions for most of these operators proceed through loops and are not available to date. 
+ These models provide a benchmark to motivate signal regions that are unique to searches with
+ EW final states and would otherwise not be studied. However, we recommend to use these models
+ as placeholders and emphasize model-independent results especially in signal regions tailored to these models. 
+ Wherever results are interpreted in terms of these operators, a truncation procedure
+ to ensure the validity of the EFT should be employed, as detailed in Section~\ref{sec:EFTValidity}. 
+  \item[V-specific simplified models] These models postulate direct couplings of new mediators
  to bosons, e.g. they couple the Higgs boson to a new vector or to a new scalar~\cite{Carpenter:2013xra,Berlin:2014cfa}. 
 \end{description}
 
